@@ -1,4 +1,6 @@
+import java.awt.*;
 import java.util.*;
+import java.util.List;
 import java.util.stream.Collectors;
 import java.util.stream.IntStream;
 import java.util.stream.Stream;
@@ -9,30 +11,51 @@ class Main {
     {
         int[] arr = {1,2,3,4,1,2};
         Arrays.sort(arr); // int[] 바로 정렬 가능
-        // int[] -> IntStream -> Stream<Integer> -> List<Integer>        collect 는 Integer에만 쓸 수 있다.
+        // reverseOrder 는 Interger에만 사용가능.
+        // int[] -> IntStream -> Stream<Interger> -> 정렬 -> IntStream -> int[]
+        int[] arrReverse = Arrays.stream(arr).boxed().sorted(Collections.reverseOrder()).mapToInt(i->i).toArray();
+
+        // int[] -> IntStream -> Stream<Integer> -> Integer[]
+        Integer[] integers = Arrays.stream(arr).boxed().toArray(Integer[]::new);
+        // Interger[] 는 역순도 바로 정렬 가능
+        Arrays.sort(integers,Collections.reverseOrder());
+        // Integer[] -> Stream<Integer> -> IntStream -> int[]
+        int[] ints = Arrays.stream(integers).mapToInt(i->i).toArray();
+        // Integer[] -> Stream<Integer> ->List<Integer>
+        List<Integer> integerList = Arrays.stream(integers).collect(Collectors.toList());
+        integerList.sort(Collections.reverseOrder());
+
+        // int[] -> IntStream -> Stream<Integer> -> List<Integer>        collect 는 Stream<Integer>에만 쓸 수 있다.
         List<Integer> list = Arrays.stream(arr).boxed().sorted().collect(Collectors.toList());
-        //List<Integer> list = Arrays.stream(arr).boxed().sorted().toList();   java 1.6 이후 부터는 .toList() 가능
+        List<Integer> list1 = IntStream.of(arr).boxed().sorted().collect(Collectors.toList());
+        List<Integer> list2 = Arrays.stream(arr).boxed().sorted().toList();   //java 1.6 이후 부터는 .toList() 가능
 
-        //List<Integer> -> Stream<Integer> -> IntStream -> int[]
-        int[] arr1 = list.stream().mapToInt(i->i).toArray();
-        //int[] arr1 = list.stream().mapToInt(Integer::intValue).toArray();
 
-        String str = "Zbcd efg";
+        // List<Integer> -> Stream<Integer> -> IntStream -> int[]
+        int[] intArray = list.stream().mapToInt(i->i).toArray();
+        int[] intArray2 = list.stream().mapToInt(Integer::intValue).toArray();
+
+        // List<Integer> -> Stream<Integer> -> Integer[]
+        Integer[] integers1 = list.stream().toArray(Integer[]::new);
+
+
+        String str = "OsdF ZbAd eKg";
         String[] strArray = str.split(" ");
-        //String -> char[]
+
+        // String -> char[]
         char[] charArray = str.toCharArray();
-        //String -> IntStream -> Stream<Character> -> List<Charater>
+        // String -> IntStream -> Stream<Character> -> List<Charater>
         List<Character> charlist = str.chars().mapToObj(i->(char)i).sorted(Collections.reverseOrder()).collect(Collectors.toList());
 
-        //String[] -> List<String>
+        // String[] -> List<String>
         List<String> strList = Arrays.asList(strArray);
 
-        //String[] -> Stream<String>
+        // String[] -> Stream<String>
         Stream<String> strStream = Stream.of(strArray);
-        //List<String> -> Stream<String>
+        // List<String> -> Stream<String>
         Stream<String> strStream1 = strList.stream();
 
-        //Stream<String> -> String
+        // Stream<String> -> String
         String str1 = strStream.collect(Collectors.joining());
 
         System.out.println(str1);
